--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,27 @@
-
 version: '3.7'
 
 services:
   splunk:
-    image: splunk/splunk:latest
+    image: splunk/splunk:9.1
     container_name: splunk
-    ports:
-      - "8000:8000"   # Web interface
-      - "8088:8088"   # HTTP Event Collector
     environment:
       - SPLUNK_START_ARGS=--accept-license
       - SPLUNK_PASSWORD=changeme
+    ports:
+      - "8000:8000"   # UI
+      - "8088:8088"   # HEC
+      - "9997:9997"   # Forwarder port
     volumes:
       - splunk-data:/opt/splunk/var
+
+  test-linux:
+    build:
+      context: .
+      dockerfile: Dockerfile.uf-test
+    container_name: test-linux
+    privileged: true
+    depends_on:
+      - splunk
 
 volumes:
   splunk-data:
