--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   splunk:
     image: splunk/splunk:9.1
+    platform: linux/amd64
     container_name: splunk
     environment:
       - SPLUNK_START_ARGS=--accept-license
