--- a/Dockerfile.uf-test
+++ b/Dockerfile.uf-test
@@ -1,50 +1,32 @@
-#!/bin/bash
-set -euo pipefail
+# --- початок зміненої частини Dockerfile.uf-test ---
+FROM ubuntu:22.04
 
-SPLUNK_HOME=/opt/splunkforwarder
-SPLUNK_BIN=$SPLUNK_HOME/bin/splunk
-SPLUNK_USER=admin
-SPLUNK_PASS=${SPLUNK_PASS:-changeme123}
-FORWARDER_TARGET=${FORWARDER_TARGET:-splunk:9997}
+ENV DEBIAN_FRONTEND=noninteractive
+ENV SPLUNK_HOME=/opt/splunkforwarder
+ENV PATH=$SPLUNK_HOME/bin:$PATH
 
-# Start rsyslog (so /var/log/auth.log and /var/log/syslog are populated)
-if command -v rsyslogd >/dev/null 2>&1; then
-  echo "[i] Starting rsyslogd..."
-  /usr/sbin/rsyslogd
-else
-  echo "[!] rsyslogd not found"
-fi
+# Dependencies + lightweight syslog (busybox) + sshd + utils
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+      ca-certificates curl gnupg2 apt-transport-https \
+      busybox rsync openssh-server dnsutils procps iproute2 net-tools \
+      sudo iputils-ping sshpass logger tar gzip && \
+    rm -rf /var/lib/apt/lists/*
 
-# Start sshd
-if [ -f /usr/sbin/sshd ]; then
-  echo "[i] Starting sshd..."
-  /usr/sbin/sshd
-fi
+# Install Splunk UF (тут вкажи робочий URL/версію як build-arg)
+ARG SPLUNK_UF_TGZ_URL="https://download.splunk.com/products/universalforwarder/releases/10.0.0/linux/splunkforwarder-10.0.0-e8eb0c4654f8-linux-amd64.tgz"
+RUN set -eux; \
+    curl -fSL "${SPLUNK_UF_TGZ_URL}" -o /tmp/splunkforwarder.tgz; \
+    mkdir -p /tmp/splunkinstall; \
+    tar -xzf /tmp/splunkforwarder.tgz -C /tmp/splunkinstall; \
+    mv /tmp/splunkinstall/* "${SPLUNK_HOME}"; \
+    rm -rf /tmp/splunkforwarder.tgz /tmp/splunkinstall
 
-# First-time splunk UF seed password and initial start
-if [ ! -f "$SPLUNK_HOME/etc/passwd" ]; then
-  echo "[i] First-run: starting splunk to create admin user..."
-  $SPLUNK_BIN start --accept-license --answer-yes --no-prompt --seed-passwd "$SPLUNK_PASS"
-  $SPLUNK_BIN stop
-fi
+# copy entrypoint (оставляємо як є в репо)
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-# Start splunk forwarder
-echo "[i] Starting Splunk UF..."
-$SPLUNK_BIN start --accept-license --answer-yes --no-prompt || true
-
-# Login (ensure commands authenticated)
-$SPLUNK_BIN login -auth "${SPLUNK_USER}:${SPLUNK_PASS}" || true
-
-# Configure forward-server (idempotent)
-$SPLUNK_BIN add forward-server "${FORWARDER_TARGET}" -auth "${SPLUNK_USER}:${SPLUNK_PASS}" || true
-
-# Add monitors if not already present
-$SPLUNK_BIN list monitor | grep '/var/log/auth.log' || $SPLUNK_BIN add monitor /var/log/auth.log -sourcetype linux_auth -index main -auth "${SPLUNK_USER}:${SPLUNK_PASS}"
-$SPLUNK_BIN list monitor | grep '/var/log/syslog' || $SPLUNK_BIN add monitor /var/log/syslog -sourcetype syslog -index main -auth "${SPLUNK_USER}:${SPLUNK_PASS}"
-
-# show status
-$SPLUNK_BIN list forward-server -auth "${SPLUNK_USER}:${SPLUNK_PASS}"
-$SPLUNK_BIN list monitor -auth "${SPLUNK_USER}:${SPLUNK_PASS}"
-
-# Keep container alive with a shell
-exec /bin/bash
+EXPOSE 22 8089 9997
+WORKDIR ${SPLUNK_HOME}
+ENTRYPOINT ["/entrypoint.sh"]
+# --- кінець зміненої частини Dockerfile.uf-test ---
